[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semianalysis-cli"
version = "0.2.0"
description = "Derive real $/1M-token serving cost from SemiAnalysis InferenceX benchmarks. Outputs table, JSON, or CSV."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Morph", email = "info@morphllm.com" }]
keywords = ["semianalysis", "inferencex", "llm", "inference", "gpu", "cost", "throughput"]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# Only needed by the standalone examples/plot.py consumer, not the CLI itself.
plot = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/morphllm/semianalysis-cli"
Repository = "https://github.com/morphllm/semianalysis-cli"

[project.scripts]
semianalysis = "semianalysis_cli.cli:run"

[tool.setuptools]
packages = ["semianalysis_cli"]
